Текста, доки, лого

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/png" href="icons/small_lgo.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,7 +32,7 @@
     </header>
     
     <div class="big-logo-block">
-        <img class="big-logo" src="images/biglogo.PNG">
+        <img class="big-logo" src="icons/biglogo.PNG">
     </div>
     <div class="container-large-field">
         <div class="large-field">
@@ -39,7 +40,7 @@
                 <h2 id="about">О нас</h2>
                 <p class="texts">
                     Школа "УникуМ" - это проект сети дестких развивающих центров с одноименным
-                    названием ... <br>
+                    названием. <br>
                     УникуМ уже восемь лет занимается образованием детей по различнвм направлениям.<br>
                     Это подготовка к школе детей разных возрастов, английский язык для школьников, логопед,
                     каллиграфия, скорочтение, подготовка к ВПР, ОГЭ, ЕГЭ и многое другое.<br>
@@ -63,6 +64,29 @@
                     +79374772300 - руководитель
                     <h3>Адрес электронной почты</h3>
                     agent-stimul@mail.ru
+                    <h3>Режим работы учреждения</h3>
+                    Центр реализует дополнительные общеобразовательные (общеразвивающие)
+                    программы в течение всего календарного года, включая каникулярное время.
+                    <br>Продолжительность учебного года составляет 36 учебных недель. Учебные занятия
+                    в Центре начинаются не позднее 1 сентября и заканчиваются 31 мая.<br>
+                    Система обучения: круглогодичная.<br>
+                    Учебная неделя в учреждении составляет 5 дней.<br>
+                    Продолжительность занятий для учащихся составляет 45 минут<br>
+                    В целях недопущения перегрузок и сохранения здоровья детей между занятиями вводятся обязательные
+                    перерывы по 5-10 мин., в ходе занятий используются элементы здоровьесберегающих технологий.
+                    <br>В каникулярное время занятия в объединениях проводятся в соответствии с календарно-тематическими
+                    планами. Допускается изменение расписания, форм и места проведения занятий.
+                    <h3>График работы учреждения</h3>
+                    Понедельник 09:00 - 20:30<br>
+                    Вторник 09:00 - 20:30<br>
+                    Среда 09:00 - 20:30<br>
+                    Четверг 09:00 - 20:30<br>
+                    Пятница 09:00 - 20:30<br>
+                    Суббота - выходной<br>
+                    Воскресенье - выходной
+                    <h3>График работы медицинского кабинета и библиотеки</h3>
+                    Медицинский кабинет в учреждении отсутствует. Библиотека в учреждении отсутствует.
+                    
                 </p>
             </section>
 
@@ -110,9 +134,14 @@
                 <h2>Документы</h2>
                 <div class="document-list">
                     <div class="texts">Политика конфиденциальности:</div>
-                    <a href="documents/test.docx" download class="document-link">
+                    <a href="documents/Политика конфиденциальности.docx" download class="document-link">
                       <img src="icons/word-icon.png" alt="Word" width="40">
-                      Политика конфиденциальности (.docx, размер)
+                      Политика конфиденциальности (.docx)
+                    </a>
+                    <div class="texts">Материально-техническое оснащение:</div>
+                    <a href="documents/материально-техническое оснащение.docx" download class="document-link">
+                      <img src="icons/word-icon.png" alt="Word" width="40">
+                      Материально-техническое оснащение (.docx)
                     </a>
 
                   </div>
