--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <section class="section-for-all">
                 <h2 id="about">О нас</h2>
                 <p class="texts">
-                    Школа "УникуМ" - это проект сети дестких развивающих центров с одноименным
+                    Школа "УникуМ" - это проект сети детских развивающих центров с одноименным
                     названием. <br>
                     УникуМ уже восемь лет занимается образованием детей по различнвм направлениям.<br>
                     Это подготовка к школе детей разных возрастов, английский язык для школьников, логопед,
