--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     
                     <div class="contact-item">
                         <i class="fas fa-envelope contact-icon"></i>
-                        <a href="mailto:example@domain.com" class="contact-link">agent-stimul@mail.ru</a><br>
+                        <a href="mailto:agent-stimul@mail.ru" class="contact-link">agent-stimul@mail.ru</a><br>
                     </div>
                 </div>
                 
